# AugModule

./: README.md  pyproject.toml
augmodule/: __init__.py  base.py  functional.py
augmodule/modules/: blur.py  color.py  crop_resize.py  flip.py  glass_blur.py  jpeg.py  noise.py  rotation.py
tests/: test_blur.py  test_color.py  test_crop_resize.py  test_flip.py  test_glass_blur.py  test_jpeg.py  test_noise.py  test_rotation.py
